--- a/src/main/resources/views/login-view.fxml
+++ b/src/main/resources/views/login-view.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="540.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
       <Label layoutX="226.0" layoutY="69.0" text="Questie">
@@ -18,6 +17,6 @@
       <TextField fx:id="textFieldUsername" layoutX="225.0" layoutY="211.0" promptText="Username" />
       <PasswordField fx:id="passwordField" layoutX="225.0" layoutY="270.0" promptText="Password" />
       <Button layoutX="224.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleLoginRequest" prefHeight="26.0" prefWidth="150.0" text="Login" />
-      <Label layoutX="216.0" layoutY="371.0" onMouseClicked="#handleSignUpRequest" text="Don't have an account? Sign up" />
+      <Label fx:id="labelSignUp" layoutX="216.0" layoutY="371.0" onMouseClicked="#handleSignUpRequest" text="Don't have an account? Sign up" />
    </children>
 </AnchorPane>
