--- a/src/main/resources/views/main-view.fxml
+++ b/src/main/resources/views/main-view.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.QuestController">
    <children>
       <TabPane layoutX="334.0" layoutY="47.0" prefHeight="546.0" prefWidth="666.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -24,12 +23,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="478.0" prefWidth="881.0">
                      <children>
-                        <TableView layoutX="14.0" layoutY="43.0" prefHeight="443.0" prefWidth="474.0">
+                        <TableView layoutX="14.0" layoutY="60.0" prefHeight="450.0" prefWidth="500.0">
                           <columns>
                             <TableColumn prefWidth="135.19997882843018" text="Quest Giver" />
                             <TableColumn prefWidth="108.00004577636719" text="Giver Rank" />
-                              <TableColumn prefWidth="120.0" text="Date of Posting" />
-                              <TableColumn prefWidth="109.60001220703123" text="Reward" />
+                              <TableColumn prefWidth="164.0" text="Date of Posting" />
+                              <TableColumn prefWidth="92.0" text="Reward" />
                           </columns>
                         </TableView>
                      </children>
@@ -38,7 +37,17 @@
           </Tab>
             <Tab text="My Quests">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView layoutX="14.0" layoutY="21.0" prefHeight="487.0" prefWidth="500.0">
+                          <columns>
+                            <TableColumn prefWidth="136.79998779296875" text="Quest Giver" />
+                            <TableColumn prefWidth="104.00006103515625" text="Giver Rank" />
+                              <TableColumn prefWidth="159.20001220703125" text="Date of Posting" />
+                              <TableColumn prefWidth="100.00006103515625" text="Reward" />
+                          </columns>
+                        </TableView>
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Post a Quest">
