--- a/src/main/resources/styles/login-style.css
+++ b/src/main/resources/styles/login-style.css
@@ -20,7 +20,6 @@
     -fx-background-color: transparent;
     -fx-border-style: solid;
     -fx-border-color: black;
-    -fx-border-width: 1px;
-    -fx-border-radius: 10px;
+    -fx-border-width: 0 0 1px 0;
     -fx-prompt-text-fill: black;
 }
