--- a/src/main/resources/styles/questing-style.css
+++ b/src/main/resources/styles/questing-style.css
@@ -46,7 +46,6 @@
 .table-view .table-cell{
     -fx-border-color: transparent;
     -fx-alignment: center;
-    /*-fx-padding: 2 0 2 10px;*/
 }
 
 .table-row-cell {
@@ -80,6 +79,17 @@
     -fx-border: solid 2px black;
     -fx-font-family: "Bell MT";
     -fx-font-size: 14px;
+}
+
+#textAreaDescription {
+    -fx-border-color: transparent;
+    -fx-font-family: "Bell MT";
+    -fx-font-size: 18px;
+    -fx-text-fill: black;
+}
+
+#textAreaDescription .content {
+    -fx-background-color: rgba(124, 192, 216, .6);
 }
 
 .text-area .scroll-pane {
